# MoonWire

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
benchmarks/: DFN-dist.lua  ipsec.txt  netpps.sh  openvpn.txt  pktgen-DFN.lua  pktgen-fixed.lua  pktgen.lua
benchmarks/libsodium/: chacha20_poly1305_ietf.c  encrypt.c
benchmarks/moonwire/: load-gen.lua
benchmarks/old/: wireguard.txt
benchmarks/sliding-window/: bench.c  sorted-array.c
benchmarks/wireguard/: generator_start_benchmarks.sh  kaunas-set-keys.sh  omanyte.sh  omanyte_pin_interrupts.sh  omanyte_start_record.sh  omanyte_stop_record.sh  omastar.sh
lua/: blake2s.lua  mempool.lua  messages.lua  missing-dpdk-stuff.lua  moonwire-independent.lua  moonwire-pipeline.lua  moonwire-simple.lua  peer.lua  sodium.lua  wireguard-gateway-mt.lua  wireguard-gateway.lua  wireguard.lua
src/: blake2s.c  blake2s.h  dpdk-pktmbuf-export.c  main.go  rfc2401.c  rfc6479.c  simple-handshake_noise-c.c  simple-handshake_sodium.c
thesis/: coverpage.tex  thesis.tex  tumcontact.sty  tumlang.sty  tumthesis.cls
thesis/bib/: IEEEfull.bib  litnew.bib  mybib.bib
thesis/common/: Makefile  Makefile.inc.example  lit.bib  msvsymbols.sty  netannouncement.cls  netbeamer.cls  netcommon.sty  netintrotalk.cls  netlogos.sty  netseries.cls  netthesis.cls  nettutorial.cls  packages  solutionswitch.sty
thesis/figures/: dfn-cdf.csv  dfn-cdf.tex
thesis/include/: abstract-de.tex  (+7 more)
zwischenvortrag/: .gitignore  Makefile  Makefile.conf.mk  beamermods.sty  lit.bib  packages.sty  slides.tex  tumbeamer.cls  tumcolor.sty  tumlang.sty  tumlogo.sty
(+150 files in other folders)
